svgio/inc/svgio/svgreader/svgtoken.hxx
@@ -178,6 +178,8 @@ namespace svgio
             SVGTokenText,
             SVGTokenBaselineShift,
 
+            SVGTokenFlowRoot,
+
             SVGTokenLast
         };
 
